--- a/w05/02mock-assessed-lab/index.html
+++ b/w05/02mock-assessed-lab/index.html
@@ -3,13 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <title>Html and Css Lab</title>
+    <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="unsemantic-grid-responsive-tablet.css">
+    <meta
+            name="viewport"
+            content="
+        width=device-width,
+        initial-scale=1,
+        minimum-scale=1,
+        maximum-scale=1"
+    />
 </head>
 
 <body>
     <header>
         <h1>HTML and CSS Lab</h1>
         <h3>Welcome to the new RGU CSDM Website</h3>
+        <img src="banner.png" alt="Robert Gordon University">        
+        <h3>SCHOOL OF COMPUTING SCIENCE AND DIGITAL MEDIA</h3>
     </header>
-<img src="">
+<main>
+    
+    <nav>
+        <a href ="#">Home</a>
+        <a href ="#">About</a>
+        <a href ="#">News</a>
+        <a href ="#">Events</a>
+        <a href ="#">Staff</a>
+        <a href ="#">Research</a>
+        <a href ="#">Study Information</a>
+        <a href ="#">Industry</a>
+    </nav>
+
+    <article>
+        <section>
+            <img src="chrisinajayne.jpg" alt="Chrisina Jayne, Head of School">
+            <h3>Welcome to the School of Computing Science and Digital Media</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisjcing elit, sed do eiuassmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </section>
+        <section>
+            <h4>Lorem Ipsum Subtitle Text</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisjcing elit, sed do eiuassmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </section>
+        <section>
+            <h4>Lorem Ipsum Subtitle Text</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisjcing elit, sed do eiuassmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </section>
+    </article>
+    <aside>
+        <section>
+            <h3>Latest News</h3>
+            <h6>Lorem Ipsum Dolor</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisjcing elit, sed do eiuassmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </section>
+        <section>
+            <h3>Upcoming Events</h3>
+            <h6>Lorem Ipsum Dolor</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisjcing elit, sed do eiuassmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </section>
+    </aside>
+    
+</main>
+
+<footer>
+    (c) Uchechi Adiele
+</footer>
 </body>
 </html>
