--- a/w06/01eg/form.html
+++ b/w06/01eg/form.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-<form action="04forloarray.php" method="post">
+<form action="http://dev2705.azurewebsites.net/w06/01eg/04forlooparray.php" method="post">
     <fieldset>
         <legend>Please leave a comment...</legend>
         <label for="name">Name:</label>
