--- a/w01/02FormsExample/index.html
+++ b/w01/02FormsExample/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form>
+<form action="">
     <fieldset>
         <legend>Please leave a comment...</legend>
         <label for="name">Name:</label>
