--- a/w03/01WorldofCheese/help.html
+++ b/w03/01WorldofCheese/help.html
@@ -28,8 +28,8 @@
             Email*
             <input type="text" name="lastname" required><br><br>
             <legend>What is your cheese problem?</legend>
-                <input type="radio" name="list" value="feta">Feta<br>
-                <input type="radio" name="list" value="gouda">Gouda<br>
+                <input type="radio" name="list" value="feta">Feta
+                <input type="radio" name="list" value="gouda">Gouda
                 <input type="radio" name="list" value="other">Other<br>
             <textarea name="message" rows="10" cols="70"></textarea><br><br>
             <input type="submit" value="Submit"><br><br><br>
