--- a/w03/01WorldofCheese/help.html
+++ b/w03/01WorldofCheese/help.html
@@ -30,7 +30,7 @@
             <legend>What is your cheese problem?</legend>
                 <input type="radio" name="list" value="feta">Feta
                 <input type="radio" name="list" value="gouda">Gouda
-                <input type="radio" name="list" value="other">Other<br>
+                <input type="radio" name="list" value="other">Other<br><br>
             <textarea name="message" rows="10" cols="70"></textarea><br><br>
             <input type="submit" value="Submit"><br><br><br>
             <p>* These fields are required.</p>
