--- a/w09/login.html
+++ b/w09/login.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <form action="checklogin.php" method="post">
-        <label for="name">Name</label>
+        <label for="name">Name</label><br>
         <input type="text" name="name">
-        <label for="password">Password</label>
+        <label for="password">Password</label><br>
         <input type="password" name="password">
         <input type="submit" value="Submit">
     </form>
