--- a/w09/login.html
+++ b/w09/login.html
@@ -7,9 +7,9 @@
 <body>
     <form action="checklogin.php" method="post">
         <label for="name">Name</label><br>
-        <input type="text" name="name">
+        <input type="text" name="name"><br>
         <label for="password">Password</label><br>
-        <input type="password" name="password">
+        <input type="password" name="password"><br>
         <input type="submit" value="Submit">
     </form>
 </body>
