--- a/w09/login_s.html
+++ b/w09/login_s.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login Page with cookie</title>
+    <title>Login Page with session</title>
 </head>
 <body>
 <form action="checklogin_s.php" method="post">
