--- a/mvs/index.html
+++ b/mvs/index.html
@@ -12,6 +12,9 @@
              <a href="allMovies.php">Display Movies</a>
          </li>
          <li>
+             <a href="allMoviesPlus.php">Display Movies</a>
+         </li>
+         <li>
              <a href="moviesByMarvel.php">Display Movies By Marvel</a>
          </li>
          <li>
