--- a/mvs/index.html
+++ b/mvs/index.html
@@ -12,7 +12,7 @@
              <a href="allMovies.php">Display Movies</a>
          </li>
          <li>
-             <a href="allMoviesPlus.php">Display Movies</a>
+             <a href="allMoviesPlus.php">Display Movies Plus IDs</a>
          </li>
          <li>
              <a href="moviesByMarvel.php">Display Movies By Marvel</a>
