--- a/w2/4pe/ProductEvaluation.html
+++ b/w2/4pe/ProductEvaluation.html
@@ -24,7 +24,7 @@
         <input type="text" name="username"><br>
         Password:<br>
         <input type="password" name="psw"><br><br>
-        <input type="radio" name="sex" value="male">
+        <input type="radio" name="sex" value="male" checked="checked">
         Male
         <br>
         <input type="radio" name="sex" value="female">
@@ -86,7 +86,7 @@
         </p>
 
             <p>Was this your first purchase of an Apple product?<p>
-                <input type="radio" name="choose" value="yes">
+                <input type="radio" name="choose" value="yes" checked="checked">
                 Yes
                 <br>
                 <input type="radio" name="choose" value="no">
