--- a/w5/2mal/index.html
+++ b/w5/2mal/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Html and Css Lab</title>
-    <link rel="stylesheet" href="mystyle.css">
-    <link rel="stylesheet" href="unsemantic-grid-responsive-tablet.css">
+    <link rel="stylesheet" href="assets/css/mystyle.css">
+    <link rel="stylesheet" href="assets/css/unsemantic-grid-responsive-tablet.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400' rel='stylesheet' type='text/css'>
     <meta
             name="viewport"
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <img src="csdmlogo.png" alt="Robert Gordon University"/>
+        <img src="assets/images/csdmlogo.png" alt="Robert Gordon University"/>
 
         <nav>
             <a href ="#">Home</a>
@@ -32,11 +32,11 @@
         </nav>
     </header>
 <main>
-<img  id = "myimg" src="banner.png"/>
+<img  id = "myimg" src="assets/images/banner.png"/>
 
     <article>
         <section>
-            <img src="chrisinajayne.jpg" alt="Chrisina Jayne, Head of School">
+            <img src="assets/images/chrisinajayne.jpg" alt="Chrisina Jayne, Head of School">
             <h3>Welcome to the School of Computing Science and Digital Media</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisjcing elit,sed do eiuassmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </section>
