--- a/w5/2mal/index.html
+++ b/w5/2mal/index.html
@@ -21,14 +21,14 @@
         <img src="assets/images/csdmlogo.png" alt="Robert Gordon University"/>
 
         <nav>
-            <a href ="#">Home</a>
-            <a href ="#">About</a>
-            <a href ="#">News</a>
-            <a href ="#">Events</a>
-            <a href ="#">Staff</a>
-            <a href ="#">Research</a>
-            <a href ="#">Study Information</a>
-            <a href ="#">Industry</a>
+            <a href ="index.html">Home</a>
+            <a href ="index.html">About</a>
+            <a href ="index.html">News</a>
+            <a href ="index.html">Events</a>
+            <a href ="index.html">Staff</a>
+            <a href ="index.html">Research</a>
+            <a href ="index.html">Study Information</a>
+            <a href ="index.html">Industry</a>
         </nav>
     </header>
 <main>
