--- a/w5/2mal/index.html
+++ b/w5/2mal/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Html and Css Lab</title>
+    <title>Html-Css-Lab</title>
     <link rel="stylesheet" href="assets/css/mystyle.css">
     <link rel="stylesheet" href="assets/css/unsemantic-grid-responsive-tablet.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400' rel='stylesheet' type='text/css'>
