--- a/w5/3maltst/index.html
+++ b/w5/3maltst/index.html
@@ -23,7 +23,7 @@
 
 <header>
     <img src="assets/images/csdmlogo.png" alt="Robert Gordon University
-        School of Computing Science and Digital Media">
+        School of Computing Science and Digital Media" width="240" height="90">
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html">About</a></li>
