--- a/w5/3maltst/index.html
+++ b/w5/3maltst/index.html
@@ -37,7 +37,7 @@
 </header>
 
 <main>
-    <img src="assets/images/banner.png" alt="Sir Ian Wood Building">
+    <img src="assets/images/banner.png" alt="Sir Ian Wood Building" width="960">
     <div>
 
     </div>
