--- a/w5/3maltst/index.html
+++ b/w5/3maltst/index.html
@@ -5,7 +5,7 @@
     <title>Html-Css-Lab</title>
     <link rel="stylesheet" href="assets/css/mystyle.css">
     <link rel="stylesheet" href="assets/css/unsemantic-grid-responsive-tablet.css">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:700,400,300' rel='stylesheet' type='text/css'>
     <!--
         Formatted for readability
     -->
@@ -19,32 +19,84 @@
     />
 </head>
 
+
+<!-- body section starts-->
 <body>
-
+<!-- header section starts-->
 <header>
-    <img src="assets/images/csdmlogo.png" alt="Robert Gordon University
-        School of Computing Science and Digital Media" width="240" height="90">
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="index.html">About</a></li>
-        <li><a href="index.html">News</a></li>
-        <li><a href="index.html">Events</a></li>
-        <li><a href="index.html">Staff</a></li>
-        <li><a href="index.html">Research</a></li>
-        <li><a href="index.html">Study Information</a></li>
-        <li><a href="index.html">Industry</a></li>
-    </ul>
+    <img src="assets/images/csdmlogo.png" alt="School of Computing Science and Digital Media" width="300" height="90">
+    <!-- navigation section starts-->
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">About</a></li>
+            <li><a href="index.html">News</a></li>
+            <li><a href="index.html">Events</a></li>
+            <li><a href="index.html">Staff</a></li>
+            <li><a href="index.html">Research</a></li>
+            <li><a href="index.html">Study Information</a></li>
+            <li><a href="index.html">Industry</a></li>
+        </ul>
+    </nav>
+    <!-- navigation section ends-->
 </header>
+<!-- header section ends-->
 
+<!-- main starts-->
 <main>
-    <img src="assets/images/banner.png" alt="Sir Ian Wood Building" width="960">
-    <div>
+    <img src="assets/images/banner.png" alt="Sir Ian Wood Building Atrium" width="960">
+    <!-- main section starts-->
+    <section>
+        <h2>Welcome to the School of Computing Science and Digital Media</h2>
+        <img src="assets/images/chrisinajayne.jpg" alt="Chrisina Jayne, Head of School">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisjcing elit,sed do eiuassmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisjcing elit,sed do eiuassmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h3>Lorem Ipsum Subtitle Text</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisjcing elit, sed do eiuassmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisjcing elit, sed do eiuassmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+       <h3>Lorem Ipsum Subtitle Text</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisjcing elit, sed do eiuassmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisjcing elit, sed do eiuassmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </section>
+    <!-- main section ends-->
 
-    </div>
+    <aside>
+        <!-- News starts-->
+        <article>
+            <h3 >Latest News</h3>
+            <h4>Lorem Ipsum Dolor</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisjcing elit, sed do eiuassmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+            <h4>Lorem Ipsum Dolor</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisjcing elit, sed do eiuassmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </article>
+        <!-- News ends-->
+
+        <!-- Events starts-->
+        <article>
+            <h3 >Latest News</h3>
+            <h4>Lorem Ipsum Dolor</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisjcing elit, sed do eiuassmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+            <h4>Lorem Ipsum Dolor</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisjcing elit, sed do eiuassmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </article>
+        <!-- Events ends-->
+
+    </aside>
+
 </main>
+<!-- main ends-->
 
+<!-- footer section starts-->
 <footer>
-
+    <p>&copy; MyName</p>
 </footer>
+<!-- footer section ends-->
+
 </body>
+<!-- body section ends-->
 </html>
+
+
+
