--- a/w5/3maltst/index.html
+++ b/w5/3maltst/index.html
@@ -24,7 +24,7 @@
 <body>
 <!-- header section starts-->
 <header>
-    <img src="assets/images/csdmlogo.png" alt="School of Computing Science and Digital Media" width="300" height="90">
+    <img src="assets/images/csdmlogo.png" alt="School of Computing Science and Digital Media" id="csdmlogo">
     <!-- navigation section starts-->
     <nav>
         <ul>
