--- a/w5/3maltst/index.html
+++ b/w5/3maltst/index.html
@@ -43,10 +43,10 @@
 <!-- header section ends-->
 
 <!-- main starts-->
-<main>
+<main class="grid-container">
     <img src="assets/images/banner.png" alt="Sir Ian Wood Building Atrium" width="960">
     <!-- main section starts-->
-    <section>
+    <section class="grid-66">
         <h2>Welcome to the School of Computing Science and Digital Media</h2>
         <img src="assets/images/chrisinajayne.jpg" alt="Chrisina Jayne, Head of School">
         <p>Lorem ipsum dolor sit amet, consectetur adipisjcing elit,sed do eiuassmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -60,7 +60,7 @@
     </section>
     <!-- main section ends-->
 
-    <aside>
+    <aside class="grid-33">
         <!-- News starts-->
         <article>
             <h3 >Latest News</h3>
