--- a/w5/3maltst/index.html
+++ b/w5/3maltst/index.html
@@ -44,11 +44,11 @@
 
 <!-- main starts-->
 <main class="grid-container">
-    <img src="assets/images/banner.png" alt="Sir Ian Wood Building Atrium" width="960">
+    <img src="assets/images/banner.png" alt="Sir Ian Wood Building Atrium" width="960" id="banner">
     <!-- main section starts-->
-    <section class="grid-66">
+    <section class="grid-66 ">
         <h2>Welcome to the School of Computing Science and Digital Media</h2>
-        <img src="assets/images/chrisinajayne.jpg" alt="Chrisina Jayne, Head of School">
+        <img src="assets/images/chrisinajayne.jpg" alt="Chrisina Jayne, Head of School" id="hos">
         <p>Lorem ipsum dolor sit amet, consectetur adipisjcing elit,sed do eiuassmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisjcing elit,sed do eiuassmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <h3>Lorem Ipsum Subtitle Text</h3>
@@ -62,7 +62,7 @@
 
     <aside class="grid-33">
         <!-- News starts-->
-        <article>
+        <article id="news">
             <h3 >Latest News</h3>
             <h4>Lorem Ipsum Dolor</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisjcing elit, sed do eiuassmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -73,7 +73,7 @@
         <!-- News ends-->
 
         <!-- Events starts-->
-        <article>
+        <article id="events">
             <h3 >Latest News</h3>
             <h4>Lorem Ipsum Dolor</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisjcing elit, sed do eiuassmod tempor incididunt ut labore et dolore magna aliqua.</p>
