--- a/w10/index.html
+++ b/w10/index.html
@@ -23,11 +23,11 @@
             <!-- start of navigation-->
             <nav>
                 <ul>
-                    <li><a>href="bugs.html">All Bug Items</a></li>
-                    <li><a>href="bugs.html">Android Bugs</a></li>
-                    <li><a>href="bugs.html">iOS Bugs</a></li>
-                    <li><a>href="bugs.html">Windows Bugs</a></li>
-                    <li><a>href="bugs.html">Insert Bug</a></li>
+                    <li><a href="bugs.html">All Bug Items</a></li>
+                    <li><a href="bugs.html">Android Bugs</a></li>
+                    <li><a href="bugs.html">iOS Bugs</a></li>
+                    <li><a href="bugs.html">Windows Bugs</a></li>
+                    <li><a href="bugs.html">Insert Bug</a></li>
                 </ul>
             </nav>
             <!-- end of navigation-->
