--- a/w10/addbugs.html
+++ b/w10/addbugs.html
@@ -38,19 +38,20 @@
     <form action="" method="post">
         <label for="bugname">Bug Name</label>
         <input type="text" name="bugname" required>
+        <br>
         <label for="bugsummary">Bug Summary</label>
         <textarea name="comments" cols="50" rows="10" required></textarea>
+        <br>
         <label for="bugcategory">Bug Category</label>
         <select name="category">
             <option value="">Select Bug Category</option>
-            <option value="Android"></option>
-            <option value="iOS"></option>
-            <option value="Windows"></option>
+            <option value="android">Android</option>
+            <option value="ios">iOS</option>
+            <option value="windows">Windows</option>
         </select>
-
+        <br>
         <input type="submit" value="Submit">
-
-
+        <br>
     </form>
     <!-- end of form-->
 
