--- a/w10/addbugs.html
+++ b/w10/addbugs.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bug Tracker</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
 
 </head>
 <!-- start of body-->
