--- a/w10/showbugs.html
+++ b/w10/showbugs.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Bug Tracker</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/unsemantic-grid-responsive-tablet.css">
 
 </head>
 <!-- start of body-->
