--- a/w10/html-files/index.html
+++ b/w10/html-files/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Bug Tracker</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/unsemantic-grid-responsive-tablet.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/unsemantic-grid-responsive-tablet.css">
     
 </head>
 <!-- start of body-->
 <body>
     <!-- start of header-->
     <header>
-        <img src="assets/images/logo.png" alt="Bug tracker logo" id="logo">
+        <img src="../assets/images/logo.png" alt="Bug tracker logo" id="logo">
         <h1>Bug Tracker</h1>
         <h1>Keeping track of all the pesky little bugs</h1>
     </header>
