--- a/w8/1lab/superheroform.html
+++ b/w8/1lab/superheroform.html
@@ -8,14 +8,14 @@
 <header>
     <h1>The Super-Superhero System</h1>
     <h2>Create a Superhero</h2>
-    <p><a href="index.php">Return to home...</a></p>
+    <p><a href="index.php">Return to homepage</a></p>
 </header>
 <main>
     <form action="insertSuperhero.php" method="post">
         <input type="text" name="firstname" placeholder="First Name"><br>
         <input type="text" name="lastname" placeholder="Last Name"><br>
         <input type="text" name="superpower" placeholder="Main Super Power"><br>
-        <input type="submit" text="Submit">
+        <input type="submit" value="Submit">
     </form>
 </main>
 </body>
