--- a/w14bt/addbugs.html
+++ b/w14bt/addbugs.html
@@ -68,7 +68,7 @@
 
 <!--Start of footer-->
 <footer>
-    Designed by [Uche Jude Egbue, 2016]
+    &copy; Designed by [Uchechi Adiele 2016]
 </footer>
 <!--end of footer-->
 </body>
